profile screeen done

--- a/MarketplaceViewXML/app/src/main/res/values/strings.xml
+++ b/MarketplaceViewXML/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Marketplace ViewXML</string>
+    <string name="Registration_toolbar">Вход</string>
 </resources>
