--- a/MarketplaceViewXML/app/src/main/res/values/strings.xml
+++ b/MarketplaceViewXML/app/src/main/res/values/strings.xml
@@ -1,4 +1,13 @@
 <resources>
     <string name="app_name">Marketplace ViewXML</string>
     <string name="Registration_toolbar">Вход</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="animals">
+        <item>По популярности</item>
+        <item>По уменьшению цены</item>
+        <item>По возрастанию цены</item>
+    </string-array>
+
 </resources>
